--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
+
 </head>
 
 <body>
@@ -31,8 +33,8 @@
         <input type="submit"></input>
     </div>
     <!-- Base info widget -->
-    <aside>
-        <span>TI Alloys Inc.</span>
+    <aside id="baseInfo">
+        <span id="baseName">TI Alloys Inc.</span>
         <hr />
         <!-- Population table -->
         <table>
@@ -79,14 +81,38 @@
             </tbody>
         </table>
     </aside>
+    <!-- Map layer widget -->
+    <aside id="mapLayerSelector">
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Map Layers</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="checkbox" id="showMapTexture" checked=true /></td>
+                    <td><label for="showMapTexture">Terrain</label></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox" id="showHexes" checked=true /></td>
+                    <td><label for="showHexes">Hexes</label></td>
+                </tr>
+            </tbody>
+        </table>
+    </aside>
     <!-- Map container -->
     <div id="viewport">
         <div id="map">
-            <img src="./img/amerish/lod0.png" alt="Map Texture" onmousedown="return false;" />
+            <div id="mapTextureLayer">
+                <img src="./img/amerish/lod0.png" alt="Map Texture" onmousedown="return false;" />
+            </div>
+            <div id="mapHexLayer">
+                <img src="./img/amerish/hexmap0.svg" alt="Base Outlines" onmousedown="return false;"
+                    style="margin-top: 35px;" /> <!-- This offset is needed to align SVG and PNG textures -->
+            </div>
         </div>
     </div>
-    <script src="index.js"></script>
-
 </body>
 
 </html>
