Quoting all attribute values
It may not be necessary, but I prefer the consistency

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <div class="selector">
         <label for="server">Server:</label>
         <select id="server">
-            <option value=1>Connery [US West]</option>
-            <option value=13 selected="true">Cobalt [EU]</option>
-            <option value=10>Miller [EU]</option>
-            <option value=17>Emerald [US East]</option>
-            <option value=40>SolTech [Asia]</option>
+            <option value="1">Connery [US West]</option>
+            <option value="13" selected="true">Cobalt [EU]</option>
+            <option value="10">Miller [EU]</option>
+            <option value="17">Emerald [US East]</option>
+            <option value="40">SolTech [Asia]</option>
         </select>
         <label for="continent">Continent:</label>
         <select id="continent">
-            <option value=2>Indar</option>
-            <option value=4>Hossin</option>
-            <option value=8>Esamir</option>
-            <option value=6 selected="true">Amerish</option>
+            <option value="2">Indar</option>
+            <option value="4">Hossin</option>
+            <option value="8">Esamir</option>
+            <option value="6" selected="true">Amerish</option>
         </select>
         <input type="submit"></input>
     </div>
@@ -91,11 +91,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><input type="checkbox" id="showMapTexture" checked=true /></td>
+                    <td><input type="checkbox" id="showMapTexture" checked="true" /></td>
                     <td><label for="showMapTexture">Terrain</label></td>
                 </tr>
                 <tr>
-                    <td><input type="checkbox" id="showHexes" checked=true /></td>
+                    <td><input type="checkbox" id="showHexes" checked="true" /></td>
                     <td><label for="showHexes">Hexes</label></td>
                 </tr>
             </tbody>
