Add dynamic SVG layer
This is a horrible implementation with hard-coded SVG strings, but it'll have to do.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                 <img src="./img/amerish/lod0.png" alt="Map Texture" onmousedown="return false;" />
             </div>
             <div id="mapHexLayer">
-                <img src="./img/amerish/hexmap0.svg" alt="Base Outlines" onmousedown="return false;"
-                    style="margin-top: 35px;" /> <!-- This offset is needed to align SVG and PNG textures -->
+                <!-- This layer is populated on load -->
             </div>
         </div>
     </div>
