Add debug crosshair

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
             <div id="mapHexLayer">
                 <!-- This layer is populated on load -->
             </div>
+            <div id="crossHair">
+                <!-- Debug helper -->
+            </div>
         </div>
     </div>
 </body>
