Add error banner if JS is not enabled

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 </head>
 
 <body>
+
+    <!-- No JS found banner -->
+    <noscript>
+        <div id="no-js-modal-banner" style="z-index:5000;">
+            <h1>No JavaScript found</h1>
+            <h2>This website does not work without JavaScript, please enable it and reload.</h2>
+            <p>We do not use cookies, don't talk to third parties and all our code is necessary to make this tool work.
+            </p>
+            <p>If you would like to confirm this for yourself, the properly documented TypeScript source code can be
+                found
+                <a href="https://github.com/auto-pl/apl-website/">on GitHub</a>.
+            </p>
+        </div>
+    </noscript>
+
     <!-- Map selector -->
     <div class="selector">
         <label for="server">Server:</label>
