Add zoom control buttons

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         </select>
         <input type="submit" />
     </div>
+    <!-- Zoom level controls -->
+    <aside id="zoomControls">
+        <input type="button" id="zoomInc" value="+"></input>
+        <input type="button" id="zoomDec" value="-"></input>
+    </aside>
     <!-- Base info widget -->
     <aside id="baseInfo">
         <span id="baseName">TI Alloys Inc.</span>
