Switch to tile-based renderer

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div id="map">
             <div id="mapTextureLayer">
                 <img src="./img/amerish/lod0.png" alt="Map Texture" onmousedown="return false;" />
+                <!-- This layer is populated on load -->
             </div>
             <div id="mapHexLayer">
                 <!-- This layer is populated on load -->
