Tidy up map layer CSS

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
     <!-- Map container -->
     <div id="viewport">
         <div id="map">
-            <div id="mapTextureLayer">
+            <div id="mapTextureLayer" class="layer">
                 <img src="./img/amerish/lod0.png" alt="Map Texture" onmousedown="return false;" />
                 <!-- This layer is populated on load -->
             </div>
-            <div id="mapHexLayer">
+            <div id="mapHexLayer" class="layer">
                 <!-- This layer is populated on load -->
             </div>
             <div id="crossHair">
