Add viewport container
This extra layer allows some overscroll on the container so it doesn't get stuck in the top/left corner when zoomed all the way out.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </noscript>
 
     <div id="viewport">
-        <div id="map">
-            <div id="terrainTiles" class="layer">
-            </div>
-            <div id="baseOutlines" class="layer">
+        <div id="mapContainer">
+            <div id="map">
+                <div id="terrainTiles" class="layer"></div>
+                <div id="baseOutlines" class="layer"></div>
             </div>
         </div>
 
