Update layer system for new viewport

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="viewport">
         <div id="mapContainer">
             <div id="map">
-                <div id="terrainTiles" class="layer"></div>
-                <div id="baseOutlines" class="layer"></div>
+                <div id="terrain" class="mapLayer terrainLayer"></div>
+                <div id="baseOutlines" class="mapLayer baseOutlineLayer"></div>
             </div>
         </div>
 
