--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div id="map">
                 <div id="terrain" class="mapLayer terrainLayer"></div>
                 <div id="baseOutlines" class="mapLayer baseOutlineLayer"></div>
+                <div id="baseNames" class="mapLayer"></div>
             </div>
         </div>
 
