--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </div>
     </noscript>
 
-    <div id="viewport">
-        <div id="mapContainer">
+    <div id="map-container">
+        <div id="map-background">
             <div id="map">
-                <div id="terrain" class="mapLayer terrainLayer"></div>
-                <div id="baseOutlines" class="mapLayer baseOutlineLayer"></div>
-                <div id="baseNames" class="mapLayer baseNameLayer"></div>
+                <div id="layer-terrain" class="mapLayer terrainLayer"></div>
+                <div id="layer-hexes" class="mapLayer baseOutlineLayer"></div>
+                <div id="layer-names" class="mapLayer baseNameLayer"></div>
             </div>
         </div>
 
