--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div id="map-container">
         <div id="map-background">
             <div id="map">
-                <div id="layer-terrain" class="mapLayer terrainLayer"></div>
-                <div id="layer-hexes" class="mapLayer baseOutlineLayer"></div>
-                <div id="layer-names" class="mapLayer baseNameLayer"></div>
+                <div id="layer-terrain" class="map__layer layer-terrain"></div>
+                <div id="layer-hexes" class="map__layer layer-hexes"></div>
+                <div id="layer-names" class="map__layer layer-names"></div>
             </div>
         </div>
 
