Move layer creation to map controller

--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
 
     <div id="map-container">
         <div id="map-background">
-            <div id="map">
-                <div id="layer-terrain" class="map__layer layer-terrain"></div>
-                <div id="layer-hexes" class="map__layer layer-hexes"></div>
-                <div id="layer-names" class="map__layer layer-names"></div>
-            </div>
+            <div id="map"></div>
         </div>
-
     </div>
 </body>
 
