--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>APL - Dev</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="ps2-map.css" />
     <script src="index.js"></script>
 </head>
 
