--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
     <div id="hero-map"></div>
+    <div id="debug-minimap">
+        <div id="debug-minimap__viewbox"></div>
+    </div>
 </body>
 
 </html>
