Create standalone minimap controller
This keeps the map renderer clean and focused on its own problems.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <div id="hero-map"></div>
-    <div id="debug-minimap">
-        <div id="debug-minimap__viewbox"></div>
+    <div id="minimap">
     </div>
 </body>
 
