--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Interactive online world map and population tracker for PlanetSide 2." />
     <meta name="viewport" content="width=device-width" />
-    <title>APL - Dev</title>
+    <title>PS2 Map Viewer - Dev</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="ps2-map.css" />
     <script src="index.js"></script>
