--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="hero-map"></div>
-    <div id="minimap"></div>
+    <div class="widget" id="minimap"></div>
 </body>
 
 </html>
