Implement region info panel
Resolves #11.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
 <body>
     <div id="hero-map"></div>
+
+    <!-- Minimap -->
     <div class="widget" id="minimap"></div>
+    <!-- Base Info -->
+    <aside class="widget" id="widget_base-info">
+        <h1 style="user-select: none;">Region</h1>
+        <span id="widget_base-info_name">TI Alloys, Inc.</span>
+        <span id="widget_base-info_type">Small Outpost</span>
+    </aside>
 </body>
 
 </html>
