--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="widget" id="minimap"></div>
     <!-- Base Info -->
     <aside class="widget" id="widget_base-info">
-        <h1 style="user-select: none;">Region</h1>
+        <h1>Region</h1>
         <span id="widget_base-info_name">TI Alloys, Inc.</span>
         <span id="widget_base-info_type">Small Outpost</span>
     </aside>
