Add continent selector
This is a quick-and-dirty solution to test things out, a more sensible restructure of the map engine will follow to allow clean shut-down of the layer handlers.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <div style="float: right; padding: 20px;">
+        <!-- Continent selector -->
+        <label for="continent-selector">Continent:</label>
+        <select name="continents" id="continent-selector"></select>
+    </div>
+
     <div id="hero-map"></div>
 
     <!-- Minimap -->
