Readability & consistency pass

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <div style="float: right; padding: 20px;">
-        <!-- Continent selector -->
+    <div class="widget" id="continent-selector-frame">
         <label for="continent-selector">Continent:</label>
         <select name="continents" id="continent-selector"></select>
     </div>
