Create basic tool hooks

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         <span id="widget_base-info_name">TI Alloys, Inc.</span>
         <span id="widget_base-info_type">Small Outpost</span>
     </aside>
+
+    <!-- Toolbar -->
+    <div class="widget" id="toolbar">
+        <h1>Toolbar</h1>
+        <span>Current tool: </span><span id="toolbar_tool">None</span><br><br>
+        <input type="button" id="toolbar-cursor" value="Cursor" />
+    </div>
 </body>
 
 </html>
