--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h1>Toolbar</h1>
         <span>Current tool: </span><span id="toolbar_tool">None</span><br><br>
         <input type="button" id="toolbar-cursor" value="Cursor" />
+        <input type="button" id="toolbar-picker" value="Map Picker" />
     </div>
 </body>
 
