Create base marker placement tool

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     <!-- Toolbar -->
     <div class="widget" id="toolbar">
         <h1>Toolbar</h1>
-        <span>Current tool: </span><span id="toolbar_tool">None</span><br><br>
+        <input type="button" id="export-bases" value="Export Bases" />
+        <span>Current tool:</span><br>
+        <span id="toolbar_tool">None</span><br><br>
         <input type="button" id="toolbar-cursor" value="Cursor" />
         <input type="button" id="toolbar-picker" value="Map Picker" />
+        <input type="button" id="toolbar-dev-base-markers" value="Dev - Place Bases" />
     </div>
 </body>
 
