Clear old UI and disable hooks

--- a/index.html
+++ b/index.html
@@ -13,32 +13,10 @@
 </head>
 
 <body>
-    <div class="widget" id="continent-selector-frame">
-        <label for="continent-selector">Continent:</label>
-        <select name="continents" id="continent-selector"></select>
+    <div id="sidebar">
+        <div id="minimap"></div>
     </div>
-
     <div id="hero-map"></div>
-
-    <!-- Minimap -->
-    <div class="widget" id="minimap"></div>
-    <!-- Base Info -->
-    <aside class="widget" id="widget_base-info">
-        <h1>Region</h1>
-        <span id="widget_base-info_name">TI Alloys, Inc.</span>
-        <span id="widget_base-info_type">Small Outpost</span>
-    </aside>
-
-    <!-- Toolbar -->
-    <div class="widget" id="toolbar">
-        <h1>Toolbar</h1>
-        <input type="button" id="export-bases" value="Export Bases" />
-        <span>Current tool:</span><br>
-        <span id="toolbar_tool">None</span><br><br>
-        <input type="button" id="toolbar-cursor" value="Cursor" />
-        <input type="button" id="toolbar-picker" value="Map Picker" />
-        <input type="button" id="toolbar-dev-base-markers" value="Dev - Place Bases" />
-    </div>
 </body>
 
 </html>
