Tweak relative file paths

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="Interactive online world map and population tracker for PlanetSide 2." />
     <meta name="viewport" content="width=device-width" />
     <title>PS2 Map Viewer - Dev</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="minimap.css" />
-    <link rel="stylesheet" href="ps2-map.css" />
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./minimap.css" />
+    <link rel="stylesheet" href="./ps2-map.css" />
+    <script src="./index.js"></script>
 </head>
 
 <body>
