Switch to new toolbar system

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 <body>
     <div id="sidebar">
-        <div id="minimap"></div>
+        <div id="minimap" class="sidebar__widget"></div>
+        <div id="toolbar" class="sidebar__widget">
+            <span class="sidebar__widget__label">Tools</span>
+            <div id="toolbar-container"></div>
+        </div>
     </div>
     <div id="hero-map"></div>
 </body>
