Restore continent switcher

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <span class="sidebar__widget__label">Tools</span>
             <div id="toolbar-container"></div>
         </div>
+        <div id="map-switcher">
+            <span class="map_switcher__label map_switcher__row2">Continent:</span>
+            <select id="continent-picker" class="map_switcher__dropdown map_switcher__row2" title="Continent Dropdown">
+                <!-- To be populated upon load -->
+            </select>
+        </div>
     </div>
     <div id="hero-map"></div>
 </body>
