Add dynamic server picker

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div id="toolbar-container"></div>
         </div>
         <div id="map-switcher">
+            <span class="map_switcher__label map_switcher__row1">Server:</span>
+            <select id="server-picker" class="map_switcher__dropdown map_switcher__row1" title="Server Dropdown">
+                <!-- To be populated upon load -->
+            </select>
             <span class="map_switcher__label map_switcher__row2">Continent:</span>
             <select id="continent-picker" class="map_switcher__dropdown map_switcher__row2" title="Continent Dropdown">
                 <!-- To be populated upon load -->
