Move base info panel into tool context widget

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </div>
     </div>
     <div id="hero-map"></div>
+
+    <aside id="tool-panel">
+        <!-- Populated dynamically based on the current tool -->
+    </aside>
 </body>
 
 </html>
