--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./minimap.css" />
     <link rel="stylesheet" href="./ps2-map.css" />
+    <link rel="stylesheet" href="./tools.css" />
     <script src="./index.js"></script>
 </head>
 
