Make sidebar resizable

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <!-- To be populated upon load -->
             </select>
         </div>
+        <div id="sidebar-selector"></div>
     </div>
     <div id="hero-map"></div>
 
