Add layer visibility toggles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <span class="sidebar__widget__label">Tools</span>
             <div id="toolbar-container"></div>
         </div>
+        <div id="layer-visibility" class="sidebar__widget">
+            <span class="sidebar__widget__label">Layer visibility</span>
+            <div id="layer-visibility-container"></div>
+        </div>
         <div id="map-switcher">
             <span class="map_switcher__label map_switcher__row1">Server:</span>
             <select id="server-picker" class="map_switcher__dropdown map_switcher__row1" title="Server Dropdown">
