Allow jumping to bases by ID

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <span class="sidebar__widget__label">Layer visibility</span>
             <div id="layer-visibility-container"></div>
         </div>
+        <div class="sidebar__widget">
+            <span class="sidebar__widget__label">Base finder</span>
+            <select id="base-finder"></select>
+            <input type="button" id="base-finder-btn" value="JumpTo" />
+        </div>
         <div id="map-switcher">
             <span class="map_switcher__label map_switcher__row1">Server:</span>
             <select id="server-picker" class="map_switcher__dropdown map_switcher__row1" title="Server Dropdown">
