Migrate tool box to new buttons

--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
       </div>
 
       <h4>Tools</h4>
-      <div class="grid-col-2">
-        <div class="tool-button">None</div>
-        <div class="tool-button">Map Cursor</div>
-        <div class="tool-button">Base Info</div>
-        <div class="tool-button" data-active>Brush</div>
-        <div class="tool-button">Eraser</div>
-      </div>
+      <div id="toolbox" class="grid-col-2"></div>
       <p>
         Hold LMB and drag on the map to draw. LMB panning is disabled while Brush tool is active, use MMB to drag
         while drawing. Brush size is relative to your current zoom level.
