Display dynamic tool help message
Needs some tidying-up, but already much happier with this than the old tool panel.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <h4>Tools</h4>
       <div id="toolbox" class="grid-col-2"></div>
-      <p>
+      <p id="tool-help">
         Hold LMB and drag on the map to draw. LMB panning is disabled while Brush tool is active, use MMB to drag
         while drawing. Brush size is relative to your current zoom level.
       </p>
