Fix sidebar resizing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="map"></div>
 
-  <aside class="sidebar">
+  <aside id="sidebar">
     <div id="sidebar-grabber"></div>
     <div class="sidebar-scroll">
 
