Move tool output to cursor-relative element
Could be merged with the cursor system so there is always exactly 1 element following the cursor.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <title>Indar - PS2Map</title>
   <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="./ps2-map.css" />
+  <link rel="stylesheet" href="./tools.css" />
   <script src="./index.js"></script>
 </head>
 
 <body>
-  <div id="map"></div>
+  <div id="map">
+    <div id="tool-context"></div>
+  </div>
 
   <aside id="sidebar">
     <div id="sidebar-grabber"></div>
