Remove default tool help
Also disabled the tool settings placeholder, to be replaced with a dynamic system later

--- a/index.html
+++ b/index.html
@@ -49,14 +49,11 @@
 
       <h4>Tools</h4>
       <div id="toolbox" class="grid-col-2"></div>
-      <p id="tool-help">
-        Hold LMB and drag on the map to draw. LMB panning is disabled while Brush tool is active, use MMB to drag
-        while drawing. Brush size is relative to your current zoom level.
-      </p>
-      <div class="settings-form">
+      <p id="tool-help"></p>
+      <!-- <div class="settings-form">
         <label class="label" for="brush-color">Brush Color</label>
         <input type="color" id="brush-color" value="#FFFF66" />
-      </div>
+      </div> -->
 
       <h4>Settings</h4>
       <details open>
