Hook up colour reset button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <label class="label" for="color-vs">Vanu Sovereignty</label>
           <input type="color" id="color-vs" value="#b84dd5" />
           <div></div>
-          <div class="button">Reset</div>
+          <div class="button" id="color-reset">Reset</div>
         </div>
       </details>
       <br />
